--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@ server.port=9094
 # ----------------------------------------
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.use-new-id-generator-mappings=true
@@ -25,11 +26,12 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-spring.datasource.platform=usersDB
+spring.datasource.platform=restserviceDB
 spring.datasource.initialize=false
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/userssDB
-spring.datasource.schema=users
-spring.datasource.username=user
-spring.datasource.password=admin
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/restserviceDB
+spring.datasource.schema=restserviceDB
+spring.datasource.username=root
+spring.datasource.password=root
+# spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
